task2/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task2-ingress
  namespace: task2
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.example.com          # Domain name 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-service      # link to the service
            port: 
              name: http-web
  tls:
  - hosts:
    - myapp.example.com
    secretName: tls-secret
